--- a/threatnote/templates/edit_user.html
+++ b/threatnote/templates/edit_user.html
@@ -28,7 +28,8 @@
 									</div>
 								</div>
 
-								<div class="kt-portlet__body">
+								
+										<form class="kt-form" id="user_form" action="{{url_for('user_submit', user_id=user_info.id) }}" method="post">
 								       	{% with messages = get_flashed_messages(with_categories=true) %}
        										 {% if messages %}
        										 <p>
@@ -38,8 +39,7 @@
 											</p>
 										    {% endif %}
 									    {% endwith %}
-
-										<form class="kt-form" action="{{url_for('user_submit', user_id=user_info.id) }}" method="post">
+											<div class="kt-portlet__body">
 											<input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
 												<div class="form-group">
 													<label for="cpassword">Name</label>
@@ -71,7 +71,7 @@
 													<button type="reset" class="btn btn-outline-primary rounded-sm"><a href="{{url_for('users_list')}}">Cancel</a></button>
 												</div>
 											</div>
-										</form>
+									</form>										
 
 								</div>
 </div></div>
@@ -79,4 +79,36 @@
 {% endblock %}
 {% block footer_scripts %}
 		<script src="static/assets/js/pages/custom/profile/overview-3.js" type="text/javascript"></script>
+<script>
+$(document).ready(function(){
+	
+	$('#user_form').submit(function(event) {
+		event.preventDefault(); 
+		
+		var em=encodeURIComponent($("#email").val());
+		var jqxhr = $.getJSON('{{url_for("check_user_email")}}?user_id={{ user_info.id }}&email='+em, function(data) {
+			  console.log( "success" );
+			})
+			  .done(function(data) {
+					if(data['id'] != 'None' ) {
+						alert('Another user already exists with email:  '+$("#email").val());
+		            } else {
+		            	if($('#password').val() !=$('#confirm_password').val() ) {
+		            		alert('Passwords do not match!')
+		            	} else {
+		            		
+							$('#user_form').unbind('submit').submit();
+		            	}
+		            	
+	                }
+			  })
+			  .fail(function() {
+			    console.log( "error" );
+			  })
+	});
+	
+});
+</script>
+
+
 {% endblock %}
